# lehmer-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  sts.bash
.github/workflows/: build.yml
benches/: lehmer_raw.rs  monte_carlo.rs
lehmer/: Cargo.toml
lehmer/benches/: lehmer_raw.rs  monte_carlo.rs
lehmer/src/: c_ffi.rs  core.rs  find_parameters.rs  lib.rs  monte_carlo_pi.rs  test_data.rs
nist/BoroshNiederreiter_128/: result.txt
nist/BoroshNiederreiter_32/: result.txt
nist/Crawford_128/: result.txt
nist/Crawford_32/: result.txt
nist/CrayRanf_128/: result.txt
nist/CrayRanf_32/: result.txt
nist/FastU32_128/: result.txt
nist/FastU32_32/: result.txt
nist/Fishman18_128/: result.txt
nist/Fishman18_32/: result.txt
nist/INMOS_128/: result.txt
nist/INMOS_32/: result.txt
nist/LEcuyer_128/: result.txt
nist/LEcuyer_32/: result.txt
nist/Lemire_128/: result.txt
nist/Lemire_32/: result.txt
nist/NaiveParkMillerOld_128/: result.txt
nist/NaiveParkMillerOld_32/: result.txt
nist/NaiveParkMiller_128/: result.txt
nist/NaiveParkMiller_32/: result.txt
nist/NaiveU32_128/: result.txt
nist/NaiveU32_32/: result.txt
nist/ParkMillerEfficient_128/: result.txt
nist/ParkMillerEfficient_32/: result.txt
nist/Randu_128/: result.txt
nist/Randu_32/: result.txt
nist/Waterman_128/: result.txt
nist/Waterman_32/: result.txt
src/: breakit.rs  c_iface.rs  core.rs  find_parameters.rs  lib.rs  mc_pi.rs  monte.rs
testu01/: ex1.c  lehmer_crush.c
testu01-sys/: Cargo.toml  build.rs  wrapper.h
testu01/crawford/: result_mid.txt  result_small.txt
testu01/fastu32/: result_big.txt  result_big_full.txt  result_mid.txt  result_small.txt
testu01/fishman18/: result-small.txt
testu01/lemire/: result_big.txt  result_mid.txt  (+1 more)
(+2 files in other folders)
