[package]
name = "lehmer"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Soukup, Henrik Böving", "Johannes Reichle"]
rust-version = "1.78"
description = "An implementation of the Lehmer RNG"
readme = "README.md"
repository = "https://github.com/hargoniX/lehmer-rs"
license = "MIT"

[dependencies]
rand_core = "0.6.4"

[dev-dependencies]
criterion = "0.5.1"
