[package]
name = "lehmer"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Soukup, Henrik Böving", "Johannes Reichle"]
rust-version = "1.78"
description = "An implementation of the Lehmer RNG"
readme = "README.md"
repository = "https://github.com/hargoniX/lehmer-rs"
license = "MIT"

[dependencies]
rand_core = "0.6.4"
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
quickcheck = "1.0.3"

[[bench]]
name = "lehmer_raw"
harness = false

[[bench]]
name = "monte_carlo"
harness = false

[[bin]]
name = "main"

[[bin]]
name = "breakit"
