[package]
name = "lehmer"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Soukup, Henrik Böving", "Johannes Reichle"]
rust-version = "1.78"
description = "An implementation of the Lehmer RNG"
readme = "README.md"
repository = "https://github.com/hargoniX/lehmer-rs"
license = "MIT"

[dependencies]
rand_core = "0.6.4"
rand = "0.8.5"
modinverse = "0.1.1"
statrs = "0.17.1"
rand_pcg = "0.3.1"
rand_chacha = "0.3.1"
rayon = "1.10.0"
plotters = "0.3.6"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
quickcheck = "1.0.3"

[[bench]]
name = "lehmer_raw"
harness = false

[[bench]]
name = "monte_carlo"
harness = false

[[bin]]
name = "main"
